--- a/css/sections/about.css
+++ b/css/sections/about.css
@@ -4,6 +4,16 @@
     overflow: hidden;
 }
 
+.about-us__image{
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: center;
+
+    background-color: var(--color-white);
+    position: relative; 
+}
+
 .about-us__image div{
     padding: 32px 64px;
     flex: 1;
@@ -15,6 +25,49 @@
     background-size: contain;
 }
 
-.about-us__image-sushi3{
-    background-color: var(--color-creamson);
+.about-us__image-sushi3 {
+    border-bottom:8px solid var(--color-creamson);
+    background-image: url('../../assets/about_bg1.png');
+}
+.about-us__image-sushi2 {
+    background-image: url('../../assets/about_bg2.png');
+}
+
+.about-us__image-sushi3 img{
+    width: 225px;
+    height: 200px;
+}
+.about-us__image-sushi2 img{
+    width: 240px;
+    height:160px;
+}
+
+.about-us__button{
+    position: absolute;
+    right: 0;
+    padding: 12px 32px;
+    min-height: 64px;
+    background-color: var(--secondary-color);
+    border:none;
+    outline: none;
+    color: white;
+    font-family: var(--plus-jakarta-sans);
+    border-radius: 32px 0 0 32px;
+    font-weight: 500;
+    font-size: 18px;
+
+    cursor: pointer;
+}
+
+.about-us__button img{
+    object-fit: contain;
+    margin-left: 32px;
+}
+
+.about-us__content{
+    padding: 64px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
